app/page.module.css
.contentContainer {
    background-color: white;
    border-top-color: var(--primary-border-color);
    border-top-style: solid;
    border-top-width: 2px;
    position: relative;
    z-index: 8;
}
.content {
    margin: 0 auto;
    max-width: 1300px;
    padding: 1rem;
    width: 100%;
}

.statsContainer {
    display: flex;
    flex-direction: row;
    gap: 1.5rem;
    overflow-x: scroll;
    overflow-y: hidden;
    padding-left: calc((100vw - 1300px) / 2);
    margin-left: 1rem;
    padding-top: 2rem;
    padding-bottom: 2rem;
}

